EPMRPP-64580 - prevent testCaseId field overlap

--- a/app/src/pages/inside/logsPage/logItemInfo/logItemInfoTabs/logItemDetails/logItemDetails.scss
+++ b/app/src/pages/inside/logsPage/logItemInfo/logItemInfoTabs/logItemDetails/logItemDetails.scss
@@ -143,4 +143,5 @@
   line-height: 1.2;
   color: $COLOR--charcoal-grey;
   padding-bottom: 10px;
+  word-break: break-all;
 }
